<resources>
    <string name="app_name">SuitmediaTest</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="palindrome">Palindrome</string>
    <string name="name">Name</string>
    <string name="profile_img_description">This is a profile image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="third_screen">Third Screen</string>
    <string name="second_screen">Second Screen</string>
    <string name="connection_timeout">Connection Timeout</string>
</resources>